# life_criteria

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  Cargo.toml  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  action-plan.md  pyproject.toml  rust_out
.jules/: sentinel.md
configs/: README.md  full.json  tuned_baseline.json
crates/spike/: Cargo.toml
crates/spike/src/: main.rs
docs/: README.md  artifact_publication_policy.md  zenodo_metadata.json
experiments/: candidateB_preshock_analysis.json  candidateB_relaxed_cap_analysis.json  candidateB_stress_analysis.json  candidateB_stress_manifest.json  coupling_analysis.json  criterion8_analysis.json  criterion8_manifest.json  final_graph_statistics.json  lifelikeness_manifest.json  stress_analysis.json  stress_manifest.json
paper/: literature_scores.md  main.tex  references.bib
scripts/: __init__.py  analysis_utils.py  analyze_candidateB_relaxed_cap.py  analyze_candidateB_stress.py  analyze_coupling.py  analyze_criterion8.py  analyze_criterion8_stress.py  analyze_ema_params.py  analyze_evolution_evidence.py  analyze_failure_pathways.py  analyze_invariance.py  analyze_lifelikeness.py  analyze_lineage.py  analyze_non_reducibility.py  analyze_orthogonal.py  analyze_orthogonality_regression.py  analyze_pairwise.py  analyze_phenotype.py  analyze_preshock_candidateB.py  analyze_results.py  analyze_seasonal_stress.py  analyze_trait_evolution.py  bench_parallel.py  check.sh  check_manuscript_consistency.py  compute_gain_stats.py  experiment_1000step.py  experiment_candidateB_relaxed_cap.py  experiment_candidateB_stress.py  experiment_common.py  experiment_criterion8.py  experiment_criterion8_stress.py  experiment_cyclic.py  (+26 more)
(+101 files in other folders)
