[package]
name = "digital-life-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "digital-life"
path = "src/main.rs"

[dependencies]
digital-life-core = { path = "../digital-life-core" }
rand.workspace = true
rand_chacha.workspace = true
clap = { version = "4.4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
