[package]
name = "life-criteria-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "life-criteria"
path = "src/main.rs"

[dependencies]
life-criteria-core = { path = "../life-criteria-core" }
rand.workspace = true
rand_chacha.workspace = true
clap = { version = "4.4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
